# ChatService

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  readme.md
.github/workflows/: tests.yml
alembic/: env.py
migrations/: env.py
migrations/versions/: bf14db809ba4_create_users_table.py
src/: config.py  conftest.py  dependencies.py  entrypoint.sh  enums.py  log.py  logger.py  main.py  pytest.ini
src/application/: user.py
src/application/auth/: hashing.py  jwt.py
src/application/common/: exceptions.py
src/application/services/exceptions/: user.py
src/application/services/interfaces/: base.py  user.py
src/chat/: chat_general_manager.py  chat_list_manager.py  consumer.py  dependency.py  exceptions.py  repo.py  router.py  schemas.py  service.py  websockets.py
src/common/: enums.py  exceptions.py  uow.py
src/db/: base.py  database.py  dependency.py  engine.py  mixin.py
src/db/filter_sets/: chats.py  users.py
src/db/orm/: __init__.py  base.py  chats.py  users.py
src/db/repository/: __init__.py  create_update_mixin.py  delete_mixin.py  list_mixin.py  retrieve_mixin.py
src/extensions/: logs.py
src/infrastructure/db/convertors/: user.py
src/infrastructure/db/models/: users.py
src/infrastructure/db/repositories/: user.py
src/migration/: env.py
src/migration/versions/: 5dc8f37d0392_create_tables_users_chats.py  8830a341f2b9_create_users.py  b5831942bfe3_create_chat_models.py  ba33b508a032_update_message_model.py
src/presentation/api/: config.py  main.py
src/presentation/api/controllers/: __init__.py  auth.py  user.py
src/presentation/api/middlewares/: logging.py
src/scripts/: __init__.py  create_first_chat.py
src/static/js/: auth.js  chat.js
src/static/styles/: auth.css  chat.css
src/tests/: config.py
src/tests/infrastructure/fixtures/: fixture_user.py
src/tests/infrastructure/models/: test_user.py
src/tests/infrastructure/repositories/: test_user.py
src/transfer/: auth.py  user.py
src/users/: auth.py  dependencies.py  dependency.py  interface.py  models.py  repo.py  repository.py  router.py  routes.py  schemas.py  service.py
users/: config.py  pytest.ini
users/application/auth/: jwt.py
users/application/common/: exceptions.py
users/application/services/: user.py
users/application/services/interfaces/: user.py
users/infrastructure/db/convertors/: user.py
users/infrastructure/db/repositories/: user.py
users/presentation/api/: main.py
users/presentation/api/controllers/: auth.py  user.py
users/presentation/api/middlewares/: logging.py
users/tests/: config.py  conftest.py
users/tests/infrastructure/fixtures/: fixture_user.py
users/tests/infrastructure/models/: test_user.py
users/tests/infrastructure/repositories/: test_user.py
users/tests/unit/: test_auth.py
users/transfer/: user.py
(+8 files in other folders)
