[tool.poetry]
name = "chat-fastapi-mongodb"
version = "0.1.0"
description = "Chat stack: FastAPI, MongoDB"
authors = ["ZhuraTown <Swiglek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
fastapi = "0.111.0"
pydantic = "2.7.1"
motor = "3.4.0"
pydantic-settings = "2.2.1"
beanie = "1.26.0"
faker = "^25.0.1"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
